travel and links to guardian

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <script type="text/javascript" src="js/weather.js"></script>
   <script type="text/javascript" src="js/news.js"></script>
+  <script type="text/javascript" src="js/football.js"></script>
+    <script type="text/javascript" src="js/quote.js"></script>
 </head>
 <body>
 
@@ -14,6 +16,12 @@
   <div id='weather'></div>
 
   <div id='news'></div>
+
+  <div id='quote'></div>
+
+  <div style="width:260px"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
+
+  <div id='football'></div>
 
 </body>
 </html>
