--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <script type="text/javascript" src="js/weather.js"></script>
   <script type="text/javascript" src="js/news.js"></script>
   <script type="text/javascript" src="js/football.js"></script>
-    <script type="text/javascript" src="js/quote.js"></script>
+  <script type="text/javascript" src="js/quote.js"></script>
+  <script type="text/javascript" src='js/cinema.js'></script>
 </head>
 <body>
 
@@ -20,6 +21,8 @@
   <div id='quote'></div>
 
   <div style="width:260px"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
+
+  <div id='cinema'></div>
 
   <div id='football'></div>
 
