--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 </head>
 <body>
 
-  <h1>API Based Website</h1>
-
   <div id='weather'></div>
 
+<div class="today">
   <div id='news'></div>
+  <div id="tfl" style="width:260px"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
+</div>
 
-  <div id='quote'></div>
-
-  <div style="width:260px"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
 
   <div id='cinema'></div>
 
   <div id='football'></div>
+
+  <div id='quote'></div>
 
 </body>
 </html>
