--- a/index.html
+++ b/index.html
@@ -14,11 +14,8 @@
 
   <div id='weather'></div>
 
-<div class="today">
   <div id='news'></div>
-  <div id="tfl" style="width:260px"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
-</div>
-
+  <div id="tfl"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
 
   <div id='cinema'></div>
 
