colouring and sport

--- a/index.html
+++ b/index.html
@@ -4,24 +4,35 @@
   <title>DailyGrind</title>
   <script type="text/javascript" src="js/jquery.js"></script>
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+  <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
   <script type="text/javascript" src="js/weather.js"></script>
   <script type="text/javascript" src="js/news.js"></script>
   <script type="text/javascript" src="js/football.js"></script>
-  <script type="text/javascript" src="js/quote.js"></script>
+  <script type="text/javascript" src="js/random.js"></script>
   <script type="text/javascript" src='js/cinema.js'></script>
 </head>
 <body>
 
   <div id='weather'></div>
 
+
   <div id='news'></div>
-  <div id="tfl"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
+
+  <div id='sport'></div>  
+
+   <div id="tfl"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
 
   <div id='cinema'></div>
 
   <div id='football'></div>
 
   <div id='quote'></div>
+
+  <div id='advice'></div>
+
+<div id="modalContent" style="display: none;">
+    <strong style="color: #ff0000;">Modal Example 2</strong>
+</div>
 
 </body>
 </html>
