gh-pages brance

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <div id='sport'></div>  
 
-   <div id="tfl"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
+   <!-- <div id="tfl"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div> -->
 
   <div id='cinema'></div>
 
@@ -30,9 +30,9 @@
 
   <div id='advice'></div>
 
-<div id="modalContent" style="display: none;">
+<!-- <div id="modalContent" style="display: none;">
     <strong style="color: #ff0000;">Modal Example 2</strong>
-</div>
+</div> -->
 
 </body>
 </html>
