--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
 
   <div id='sport'></div>  
 
-   <!-- <div id="tfl"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div> -->
-
   <div id='cinema'></div>
 
   <div id='football'></div>
@@ -29,6 +27,9 @@
   <div id='quote'></div>
 
   <div id='advice'></div>
+
+     <div id="tfl"><script language="JavaScript" src="http://www.tfl.gov.uk/tfl/syndication/widgets/serviceboard/embeddable/serviceboard-iframe-stretchy.js"></script></div>
+
 
 <!-- <div id="modalContent" style="display: none;">
     <strong style="color: #ff0000;">Modal Example 2</strong>
