--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>DailyGrind</title>
+  <title>Daily Life</title>
   <script type="text/javascript" src="js/jquery.js"></script>
   <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
   <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
